@@ -1,3 +1,9 @@
+Thu Jun 27 11:34:40 BST 2013  Colin Watson  <cjwatson@debian.org>
+
+	* src/mandb.c (xcopy): Allocate buf on the heap, as 32768 bytes may
+	  be too large for some stacks.  Reported by Coverity via Peter
+	  Schiffer.
+
 Thu Jun 27 10:47:13 BST 2013  Colin Watson  <cjwatson@debian.org>
 
 	* docs/HACKING: Mention that xasprintf may be more readable than
